--- a/css.css
+++ b/css.css
@@ -549,7 +549,7 @@ html {
 
 .grid .grid-head h2 {
     padding-top: 10px;
-    margin-left: 50px;		//42%
+    margin-left: 50px;		
     color: #ee220c;
 }
 
